manifests/traefik-config/ing-traefik-dashboard-tailscale.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-tailscale
  namespace: kube-system
  annotations:
    tailscale.com/tags: "tag:traefik,tag:k8s"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: traefik-dashboard
      port:
        name: traefik
  tls:
    - hosts:
        - traefik
        - traefik.takaya-map.ts.net
